{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Movement",
            "id": "161a3e3f-e241-4dfd-a2ac-cf189883c379",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a850441d-313a-4d20-a908-1ccca850574c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "1a90a74d-2508-40bf-8d85-1a55141cee60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec439557-c94a-41ed-a896-711d4ca0f003",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "fd081386-5160-40a3-a2da-144261c1f974",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "cd815154-8c8e-4414-8a36-2206dbf77dc8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b26f57fc-2a71-492b-848f-6a66a6084aac",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Vacuum",
            "id": "6ec33095-08b2-4395-96c6-907b4f5622bd",
            "actions": [
                {
                    "name": "Absorption",
                    "type": "Button",
                    "id": "582d8831-77da-4f6c-bcdd-6038628976f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpittingOut",
                    "type": "Button",
                    "id": "d554c1a6-0189-4d64-b510-241cb4c9db19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftSelect",
                    "type": "Button",
                    "id": "d096f75f-636d-4128-981b-d7fb4965702e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightSelect",
                    "type": "Button",
                    "id": "d3da2573-4191-4b07-8e13-c7c3c77bbc9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fbbd3de9-342e-4778-91cc-fa51ea1cf671",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Absorption",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b1e8db5-1fd0-48a9-8617-cf2be9249687",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpittingOut",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a40e2c6c-4418-436f-82b6-eb421c3eb070",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0d55759-476e-415f-a07d-b77bc346aa17",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightSelect",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}